--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
                 <label for="pesan" class="form-label">Tulis Pesan</label>
                 <textarea class="form-control" id="pesan" rows="3"></textarea>
               </div>
-              <button type="submit" class="btn btn-primary">Kirim</button>
+              <button type="submit" class="btn" style="background-color: rgb(54, 70, 68)">Kirim</button>
             </form>
           </div>
         </div>
