mengubah isi contact

--- a/index.html
+++ b/index.html
@@ -103,14 +103,7 @@
               </div>
             </div>
           </div>
-          <div class="col-md-4 mb-3">
-            <div class="card">
-              <img src="img/project/2.jpg" class="card-img-top" alt="..." />
-              <div class="card-body">
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-              </div>
-            </div>
-          </div>
+
           <div class="col-md-4 mb-3">
             <div class="card">
               <img src="img/project/3.jpg" class="card-img-top" alt="..." />
@@ -122,14 +115,6 @@
           <div class="col-md-4 mb-3">
             <div class="card">
               <img src="img/project/4.jpg" class="card-img-top" alt="..." />
-              <div class="card-body">
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-              </div>
-            </div>
-          </div>
-          <div class="col-md-4 mb-3">
-            <div class="card">
-              <img src="img/project/5.jpg" class="card-img-top" alt="..." />
               <div class="card-body">
                 <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
               </div>
@@ -152,26 +137,36 @@
       <div class="container">
         <div class="row text-center">
           <div class="col">
-            <h2>Contact Me</h2>
+            <h2>Achievement and Certificate</h2>
           </div>
         </div>
         <div class="row justify-content-center mb-3">
-          <div class="col-md-6">
-            <form>
-              <div class="mb-3">
-                <label for="name" class="form-label">Nama Lengkap</label>
-                <input type="text" class="form-control" id="name" aria-describedby="name" />
+          <div class="row justify-content-center">
+            <div class="col-md-4 mb-3">
+              <div class="card">
+                <img src="img/project/1.jpg" class="card-img-top" alt="..." />
+                <div class="card-body">
+                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                </div>
               </div>
-              <div class="mb-3">
-                <label for="email" class="form-label">Email</label>
-                <input type="email" class="form-control" id="email" aria-describedby="email" />
+            </div>
+
+            <div class="col-md-4 mb-3">
+              <div class="card">
+                <img src="img/project/3.jpg" class="card-img-top" alt="..." />
+                <div class="card-body">
+                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                </div>
               </div>
-              <div class="mb-3">
-                <label for="pesan" class="form-label">Tulis Pesan</label>
-                <textarea class="form-control" id="pesan" rows="3"></textarea>
+            </div>
+            <div class="col-md-4 mb-3">
+              <div class="card">
+                <img src="img/project/4.jpg" class="card-img-top" alt="..." />
+                <div class="card-body">
+                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                </div>
               </div>
-              <button type="submit" class="btn" style="background-color: rgb(54, 70, 68)">Kirim</button>
-            </form>
+            </div>
           </div>
         </div>
       </div>
