--- a/index.html
+++ b/index.html
@@ -33,10 +33,13 @@
               <a class="nav-link" href="#about">About</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#projects">Projects</a>
+              <a class="nav-link" href="#internship">Internship</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#contact">Contact</a>
+              <a class="nav-link" href="#projects">Project</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#certificate">Certificate</a>
             </li>
           </ul>
         </div>
@@ -69,10 +72,20 @@
         </div>
         <div class="row justify-content-center fs-5 text-center">
           <div class="col-md-4">
-            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sit minima eligendi eius consequatur aliquid at reiciendis minus? Provident, incidunt doloribus?</p>
+            <p>
+              I was born in Pematang Siantar on 28 August 1998. Graduated from Civil Aviation and Safety Engineering of Medan major in Air Traffic Control in 2019. I'm the best graduate from my major. I got my ATC Licence but at that time
+              there were no recruitment yet. So i continued to get my Surveilance Rating in November 2019 until February 2020. In January 2020, i decided to continue to get my Bachelor's degree programme in Business Administration at
+              Terbuka University. In April 2020 AirNav Indonesia open the recruitment and i sent my application but in the end of april 2020 there was an email said that the recruitment will be postponed until further notice because of the
+              Covid-19 Pandemic. Life must go on and i believe to continuous learning.
+            </p>
           </div>
           <div class="col-md-4">
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique expedita delectus reprehenderit placeat optio, omnis assumenda labore vel odit, iste beatae, nobis quos magni architecto.</p>
+            <p>
+              I also read many books about self development like "The Inteligent Investor" by Benjamin Graham, "Si Cacing dan Kotorannya" by Ajahn Brahm, "Become Better of You" by Joel Osteen and other books. I joined the capital market at
+              Bursa Efek Indonesia and become an small investor. Tried to learn how to read an anual report from internet. In March 2021, i joined a course to learn about front-end developer beginner at Webmedia and it would reminded me
+              when i was in senior highschool become as operator website school using wordpress. I also got my AWS Cloud Foundation from Digital Talent Scholarship by Kominfo .And here i'm now and i hope can learn more knowledge and get
+              best experience in Apple Developer Academy.
+            </p>
           </div>
         </div>
       </div>
@@ -86,37 +99,38 @@
     </section>
     <!-- Akhir About-->
 
-    <!-- Projects-->
-    <section id="projects">
+    <!-- Internship-->
+    <section id="internship">
       <div class="container">
         <div class="row text-center mb-3">
           <div class="col">
-            <h2>My Projects</h2>
+            <h2>Internship</h2>
           </div>
         </div>
+
         <div class="row justify-content-center">
           <div class="col-md-4 mb-3">
             <div class="card">
-              <img src="img/project/1.jpg" class="card-img-top" alt="..." />
+              <img src="atc/atc1.jpg" class="card-img-top" alt="..." />
               <div class="card-body">
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                <p class="card-text">Internship at Sultan Mahmud Badaruddin II Internatinal Airport as an Air Traffic Control Tower and control by visual.</p>
               </div>
             </div>
           </div>
 
           <div class="col-md-4 mb-3">
             <div class="card">
-              <img src="img/project/3.jpg" class="card-img-top" alt="..." />
+              <img src="atc/atc2.jpg" class="card-img-top" alt="..." />
               <div class="card-body">
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                <p class="card-text">Internship at Samratulangi International Airport as an Air Traffic Control Procedural and control based on reporting by pilot.</p>
               </div>
             </div>
           </div>
           <div class="col-md-4 mb-3">
             <div class="card">
-              <img src="img/project/4.jpg" class="card-img-top" alt="..." />
+              <img src="atc/atc3.jpg" class="card-img-top" alt="..." />
               <div class="card-body">
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                <p class="card-text">Internship at Sultan Mahmud Badaruddin II International Airport as an Air Traffic Control Sureveillance using radar service.</p>
               </div>
             </div>
           </div>
@@ -130,40 +144,136 @@
         ></path>
       </svg>
     </section>
-    <!--- Akhir Projects-->
+    <!--- Akhir Internship-->
 
-    <!-- Contact-->
-    <section id="contact">
+    <!-- Project-->
+    <section id="projects">
       <div class="container">
         <div class="row text-center">
           <div class="col">
-            <h2>Achievement and Certificate</h2>
+            <h2>My Projects</h2>
           </div>
         </div>
         <div class="row justify-content-center mb-3">
           <div class="row justify-content-center">
             <div class="col-md-4 mb-3">
               <div class="card">
-                <img src="img/project/1.jpg" class="card-img-top" alt="..." />
+                <img src="project/1.png" class="card-img-top" alt="..." />
                 <div class="card-body">
-                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                  <p class="card-text">My first project using CSS/HTML and Java Script to make a simple website about Aviation Academy in Indonesia.</p>
                 </div>
               </div>
             </div>
 
             <div class="col-md-4 mb-3">
               <div class="card">
-                <img src="img/project/3.jpg" class="card-img-top" alt="..." />
+                <img src="project/2.png" class="card-img-top" alt="..." />
                 <div class="card-body">
-                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                  <p class="card-text"></p>
                 </div>
               </div>
             </div>
             <div class="col-md-4 mb-3">
               <div class="card">
-                <img src="img/project/4.jpg" class="card-img-top" alt="..." />
+                <img src="project/3.png" class="card-img-top" alt="..." />
                 <div class="card-body">
-                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                  <p class="card-text"></p>
+                </div>
+              </div>
+            </div>
+            <div class="col-md-4 mb-3">
+              <div class="card">
+                <img src="project/4.jpeg" class="card-img-top" alt="..." />
+                <div class="card-body">
+                  <p class="card-text">The cover of My On The Job Training in Sultan Mahmud Badaruddin II International Airport.</p>
+                </div>
+              </div>
+            </div>
+            <div class="col-md-4 mb-3">
+              <div class="card">
+                <img src="project/5.jpeg" class="card-img-top" alt="..." />
+                <div class="card-body">
+                  <p class="card-text">The problem that i used in my report. That is the inefficiency using radio to deliver estimated arrival and parking stand number between tower control and apron movement control.</p>
+                </div>
+              </div>
+            </div>
+            <div class="col-md-4 mb-3">
+              <div class="card">
+                <img src="project/6.jpeg" class="card-img-top" alt="..." />
+                <div class="card-body">
+                  <p class="card-text">I got solution to make a computer otomation that will be ready in tower unit and apron movement unit as an intermediary.</p>
+                </div>
+              </div>
+            </div>
+            <div class="col-md-4 mb-3">
+              <div class="card">
+                <img src="project/7.jpeg" class="card-img-top" alt="..." />
+                <div class="card-body">
+                  <p class="card-text">The cover of My On The Job Training in Samratulangi International Airport</p>
+                </div>
+              </div>
+            </div>
+            <div class="col-md-4 mb-3">
+              <div class="card">
+                <img src="project/8.jpeg" class="card-img-top" alt="..." />
+                <div class="card-body">
+                  <p class="card-text">The problem that i used in my report. The Aircraft always request for holding over North Area but there's still no holding fix.</p>
+                </div>
+              </div>
+            </div>
+            <div class="col-md-4 mb-3">
+              <div class="card">
+                <img src="project/9.jpeg" class="card-img-top" alt="..." />
+                <div class="card-body">
+                  <p class="card-text">I got solution that there'll be make a holding fix.</p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
+        <path
+          fill="#e6e6e6"
+          fill-opacity="1"
+          d="M0,224L60,224C120,224,240,224,360,202.7C480,181,600,139,720,154.7C840,171,960,245,1080,272C1200,299,1320,277,1380,266.7L1440,256L1440,320L1380,320C1320,320,1200,320,1080,320C960,320,840,320,720,320C600,320,480,320,360,320C240,320,120,320,60,320L0,320Z"
+        ></path>
+      </svg>
+    </section>
+    <!-- Akhir Project-->
+
+    <!-- Certificate-->
+    <section id="certificate">
+      <div class="container">
+        <div class="row text-center">
+          <div class="col">
+            <h2>Certificate</h2>
+          </div>
+        </div>
+        <div class="row justify-content-center mb-3">
+          <div class="row justify-content-center">
+            <div class="col-md-4 mb-3">
+              <div class="card">
+                <img src="certificate/1.jpeg" class="card-img-top" alt="..." />
+                <div class="card-body">
+                  <p class="card-text">Best Graduate from Major Diploma Air Traffic Control Certificate</p>
+                </div>
+              </div>
+            </div>
+
+            <div class="col-md-4 mb-3">
+              <div class="card">
+                <img src="certificate/2.jpeg" class="card-img-top" alt="..." />
+                <div class="card-body">
+                  <p class="card-text">HTML/CSS, Java Script, and Bootstrap Certificate</p>
+                </div>
+              </div>
+            </div>
+            <div class="col-md-4 mb-3">
+              <div class="card">
+                <img src="certificate/3.png" class="card-img-top" alt="..." />
+                <div class="card-body">
+                  <p class="card-text">AWS Cloud Foundation Certificate <a href="https://www.credly.com/badges/c0abf824-25e8-40b2-9cb7-c90bc87abc42" class="text-dark fw-bold">Hastomi's Badge</a></p>
                 </div>
               </div>
             </div>
@@ -178,7 +288,7 @@
         ></path>
       </svg>
     </section>
-    <!-- Akhir Contact-->
+    <!-- Akhir Certificate-->
     <!-- Footer-->
     <footer class="text-white text-center pb-3" style="background-color: rgb(54, 70, 68)">
       <p>Created with <i class="bi bi-suit-heart-fill"></i> by <a href="https://www.instagram.com/hastomimunthe/" class="text-white fw-bold">Hastomi Riduan Munthe</a></p>
