--- a/index.html
+++ b/index.html
@@ -291,7 +291,11 @@
     <!-- Akhir Certificate-->
     <!-- Footer-->
     <footer class="text-white text-center pb-3" style="background-color: rgb(54, 70, 68)">
-      <p>Created with <i class="bi bi-suit-heart-fill"></i> by <a href="https://www.instagram.com/hastomimunthe/" class="text-white fw-bold">Hastomi Riduan Munthe</a></p>
+      <p>
+        Created with <i class="bi bi-suit-heart-fill"></i> by Hastomi Riduan Munthe <br />
+        <a href="https://www.instagram.com/hastomimunthe/" class="text-white fw-bold">Instagram</a>
+        <a href="https://www.linkedin.com/in/hastomi-riduan-munthe-93b80b1b7/" class="text-white fw-bold">Linkedin</a>
+      </p>
     </footer>
     <!-- Akhir Footer-->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
