--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 
     <!-- Jumbotron -->
     <section class="jumbotron text-center">
-      <img src="img/tom.jpg" alt="Hastomi Riduan Munthe" width="200" class="rounded-circle img-thumbnail" />
+      <img src="img/pas photo.jpg" alt="Hastomi Riduan Munthe" width="200" class="rounded-circle img-thumbnail" />
       <h1 class="display-4">Hastomi Riduan Munthe, A.Md</h1>
       <p class="lead">Bachelor's Business Student | ATC Licence Holder</p>
       <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
@@ -74,7 +74,7 @@
           <div class="col-md-4">
             <p>
               I was born in Pematang Siantar on 28 August 1998. Graduated from Civil Aviation and Safety Engineering of Medan major in Air Traffic Control in 2019. I'm the best graduate from my major. I got my ATC Licence but at that time
-              there were no recruitment yet. So i continued to get my Surveilance Rating in November 2019 until February 2020. In January 2020, i decided to continue to get my Bachelor's degree programme in Business Administration at
+              there were no recruitment yet. So i continued to get my Surveillance Rating in November 2019 until February 2020. In January 2020, i decided to continue to get my Bachelor's degree programme in Business Administration at
               Terbuka University. In April 2020 AirNav Indonesia open the recruitment and i sent my application but in the end of april 2020 there was an email said that the recruitment will be postponed until further notice because of the
               Covid-19 Pandemic. Life must go on and i believe to continuous learning.
             </p>
@@ -130,7 +130,7 @@
             <div class="card">
               <img src="atc/atc3.jpg" class="card-img-top" alt="..." />
               <div class="card-body">
-                <p class="card-text">Internship at Sultan Mahmud Badaruddin II International Airport as an Air Traffic Control Sureveillance using radar service.</p>
+                <p class="card-text">Internship at Sultan Mahmud Badaruddin II International Airport as an Air Traffic Control Surveillance using radar service.</p>
               </div>
             </div>
           </div>
