mengubah data diri

--- a/index.html
+++ b/index.html
@@ -83,8 +83,7 @@
             <p>
               I also read many books about self development like "The Inteligent Investor" by Benjamin Graham, "Si Cacing dan Kotorannya" by Ajahn Brahm, "Become Better of You" by Joel Osteen and other books. I joined the capital market at
               Bursa Efek Indonesia and become an small investor. Tried to learn how to read an anual report from internet. In March 2021, i joined a course to learn about front-end developer beginner at Webmedia and it would reminded me
-              when i was in senior highschool become as operator website school using wordpress. I also got my AWS Cloud Foundation from Digital Talent Scholarship by Kominfo .And here i'm now and i hope can learn more knowledge and get
-              best experience in Apple Developer Academy.
+              when i was in senior highschool become as operator website school using wordpress. I also got my AWS Cloud Foundation from Digital Talent Scholarship by Kominfo.
             </p>
           </div>
         </div>
